--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,6 @@
-@import './mixin';
+.textOverflow {
+  word-break: break-all;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
